--- a/05-devops-with-docker-part3/sekcja2/zad1_16_docker/index.html
+++ b/05-devops-with-docker-part3/sekcja2/zad1_16_docker/index.html
@@ -2,7 +2,7 @@
 <html>
   <head><meta charset="utf-8"><title>Hello</title></head>
   <body>
-    <h1>Moja aplikacja</h1>
+    <h1>Moja aplikacja 3.2</h1>
     <p>Liwia Skoczeń 225IC 25086</p>
     <p>Zadanie 3.2</p>
   </body>
